tests/paczka1/small_fuzzy/49731524.err
Error in line 2: MT66Le A626 90,8
Error in line 4: Gba7Gyds A917 39,2
Error in line 6: MT66Le A917 35,5
